<resources>
    <string name="preference_key" translatable="false">shared_pref</string>
    <string name="version_format" formatted="false" translatable="false">gotobrowser-%s</string>
    <string name="copyright_format" translatable="false">© 2019-%d antest1(IE10)</string>

    <string name="app_name">GotoBrowser</string>
    <string name="confirmation">Are you sure?</string>
    <string name="action_ok">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="selected_server">Login Method</string>
    <string name="select_server">Select Login Method</string>
    <string name="select_server_toast">Login method must be chosen first</string>
    <string name="cache_clear_text">Clear Cache</string>
    <string name="cache_cleared_toast">Webview cache cleared</string>
    <string name="clearcache_msg">Only use this function when image or audio is not loaded properly. Do you really want to clear the cache?</string>
    <string name="thirdpartyconnector_msg" translatable="false">In the case of non-official web proxy-based connectors (like OOI), the game resources may be different from the original ones, depending on their policy. Basically, GotoBrowser does not inference the policy of each connector. If you do not want to display unofficial resources with GotoBrowser, please clear the cache and play KanColle through DMM Direct.</string>
    <string name="backpress_msg">Press back again to exit</string>
    <string name="refresh_msg">Do you really want to refresh?</string>
    <string name="mode_landscape">Landscape Mode</string>
    <string name="mode_adjustment">Auto Layout Adjustment</string>
    <string name="mode_silent">Start with Audio OFF</string>
    <string name="mode_broadcast">Broadcast Mode</string>
    <string name="mode_show_panel">Show Control Panel on Start</string>
    <string name="mode_enable_keyboard">Enable Keyboard Input</string>
    <string name="button_start">START</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="subtitle_default">SUBTITLE AREA / TOUCH TO HIDE</string>
    <string name="autocomplete_title">Login Autocomplete</string>
    <string name="autocomplete_msg">This information will only be used to fill the login form</string>
    <string name="settings_version_label">Current Version</string>
    <string name="settings_version_check">Check Update</string>
    <string name="settings_recommended_summary">Recommended</string>
    <string name="settings_subtitle_label">Subtitle Settings</string>
    <string name="settings_subtitle_fontsize">Font Size</string>
    <string name="settings_subtitle_example" formatted="false">TEXT SIZE: %d</string>
    <string name="settings_subtitle_download">Download Subtitle Data</string>
    <string name="settings_subtitle_language">Current Language</string>
    <string name="settings_source_code">Source Code</string>
    <string name="settings_appinfo_label">App Information</string>
    <string name="no_subtitle_file">Please download subtitle data from the settings first</string>
    <string name="setting_latest_version">You have the latest version</string>
    <string name="setting_latest_download" formatted="false">An update is available. (%s)\nDo you want to download it?</string>
    <string name="setting_latest_download_subtitle" formatted="false">An update is available. (%s)</string>

    <string name="github_link" translatable="false">https://github.com/antest1/GotoBrowser/</string>
    <string name="license_link" translatable="false">https://github.com/antest1/GotoBrowser/blob/master/LICENSE</string>
    <string name="manual_link" translatable="false">https://luckyjervis.com/gotobrowser/docs/?from_app=true</string>
    <string name="settings_appinfo_browsersettings">Browser Settings</string>
    <string name="browser_fontprefetch">Prefetch Font Assets</string>
    <string name="browser_enablepipmode">Picture-in-picture mode</string>
    <string name="browser_disable_refresh_dialog">Disable Refresh Warning Dialog</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>
    <string name="noti_screenshot_name">GotoBrowser Screenshot</string>
    <string name="noti_screenshot_title">Screenshot Captured</string>
    <string name="noti_screenshot_description">Tap to view your screenshot</string>
    <string name="noti_screenshot_permission_message">Notification permission is required to show the screenshot result.</string>
    <string name="granted_true_notification_permission">Notification permission granted.</string>
    <string name="granted_false_notification_permission">Notification permission not granted.</string>
    <string name="subtitle_select_language">Language must be chosen first</string>
    <string name="settings_mw_margin">[Multi-Window] Add Margin from Divider</string>
    <string name="setting_devtools_enable">Enable DevTools Debugging</string>
    <string name="setting_devtools_description" translatable="false">chrome://inspect</string>
    <string name="connection_use_alter">Gadget Block Bypass</string>
    <string name="connection_use_alter_summary">Use this setting if you\'re faced with the foreign IP block issue (infinite black screen)</string>
    <string name="setting_connection">Connection Settings</string>
    <string name="setting_alter_method">Bypass Method</string>
    <string name="setting_alter_method_url">URL Replacement</string>
    <string name="setting_alter_method_proxy">KCCacheProxy (remote)</string>
    <string name="setting_alter_method_proxy_error_toast">KCCacheProxy Endpoint Server is invalid. Please update your Bypass Method setting.</string>
    <string name="setting_alter_endpoint">Bypass Endpoint Server</string>
    <string name="setting_cursor_mode">Input Mode</string>
    <string name="setting_cursor_mode_touch">Screen Touch</string>
    <string name="setting_cursor_mode_mouse">Using Mouse</string>

    <string name="menu_tooltip_refresh">Refresh</string>
    <string name="menu_tooltip_mute">Mute Audio</string>
    <string name="menu_tooltip_camera">Screenshot Mode</string>
    <string name="menu_tooltip_lock">Auto-Rotate Lock</string>
    <string name="menu_tooltip_brighton">Screen Always-On</string>
    <string name="menu_tooltip_cc">Subtitle</string>
    <string name="menu_tooltip_logout">Logout</string>

    <string name="settings_legacy_renderer_enable">Legacy Renderer</string>
    <string name="settings_legacy_renderer_summary">Force PixiJS game engine to use Canvas renderer instead of WebGL renderer. It may solve most display glitches but reduce performance.</string>

    <string name="settings_mod_label">Third Party Mods (use at your own risk)</string>
    <string name="settings_mod_kantai3d_enable">Kantai3D v4.0</string>
    <string name="settings_mod_kantai3d_summary">Add 3D-like visual effects and jiggle physics to some of your secretaries. Author: @laplamgor</string>
    <string name="settings_mod_kantai3d_about">About Kantai3D</string>
    <string name="settings_mod_kantaien_enable">[Beta] KanColle English Patch</string>
    <string name="settings_mod_kantaien_summary">Translates most of the game into English. Author: @Oradimi</string>
    <string name="settings_mod_kantaien_download">Download English Patch Data</string>
    <string name="settings_mod_kantaien_download_start">Downloading… You can leave the application in the background while downloading.</string>
    <string name="settings_mod_kantaien_delete">Delete English Patch Data</string>
    <string name="settings_mod_kantaien_delete_summary">Use this setting if the patch is presenting unexpected behaviours, or if something went wrong during the download.</string>
    <string name="settings_mod_kantaien_about">About KanColle English Patch</string>
    <string name="settings_mod_fps_enable">Remove 60 FPS limit</string>
    <string name="settings_mod_fps_summary">Support higher refresh rate devices. Animation speed is not affected.</string>
    <string name="settings_mod_crit_enable">True Critical Hits</string>
    <string name="settings_mod_crit_summary">Removes some hard-coded obfuscation for hits. Only a critical hit will be displayed as such, etc. Author: @Oradimi</string>
    <string name="settings_use_external_dir">External Storage for Resource Caching</string>
    <string name="menu_tooltip_kantai3d">Toggle 3D effects</string>
    <string name="msg_kantai3d_init">No secretary detected</string>
    <string name="msg_kantai3d_loaded">The depth map of the current secretary CG is loaded: %s</string>
    <string name="msg_kantai3d_error">The depth map of the current secretary CG is unavailable: %s</string>
    <string name="msg_kantai3d_redirect">To see the list of all 3D-supported CG, or contribute new depth maps, please visit: https://github.com/laplamgor/kantai3d</string>

    <string name="en_download_start">Download starting…</string>
    <string name="en_unzip_start">Unzipping… Please wait…</string>
    <string name="en_unzip_done">Patch unzip complete!</string>
    <string name="en_update_done">Patch update complete!</string>
    <string name="en_install_done_notification">English Patch installed! Please restart the game.</string>
    <string name="en_update_done_notification">English Patch updated! Please restart the game.</string>

    <string name="browser_ui_hint_text">« click any outside area to open the panel »</string>

    <string name="settings_retry_enable">Retry Game Asset Download</string>
    <string name="settings_retry_summary">Prompt a dialog to ask for retry when the client fails to download any in-game sound or image asset. Can sometimes avoid catbombs caused by poor network. DOES NOT apply to game data API errors.</string>
    <string name="dialog_retry_title">Failed to download a game asset file</string>
    <string name="dialog_retry_yes">Retry the download</string>
    <string name="dialog_retry_no">Do nothing</string>
    <string name="dialog_retry_never">Do nothing and never ask again</string>
    <string name="dialog_retry_message">A network issue occurred while the game client was trying to download a resource file.\nDo you want to retry the download?\n%s</string>

    <string name="dialog_ipblock_title">Foreign IP Block Detected</string>
    <string name="dialog_ipblock_message" formatted="false">Please turn on 「%s」 option on the main screen or settings.</string>

    <string name="channel_name" translatable="false">gotobrowser_channel</string>
    <string name="channel_description" translatable="false">gotobrowser_channel_description</string>
    <string name="kcanotify_broadcast_dialog_title">Kcanotify Detected</string>
    <string name="kcanotify_broadcast_dialog_message" formatted="false">To use GotoBrowser with Kcanotify, 「%s」 must be turned on. Do you want to enable it by clicking %s?</string>
</resources>
