<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EntranceActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:src="@mipmap/background"
        app:srcCompat="@mipmap/background" />

    <ImageView
        android:id="@+id/gotland_full"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scrollY="-35dp"
        app:srcCompat="@mipmap/gotland_full" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="195dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/connector_select_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="@color/colorSiteSelection">

                    <TextView
                        android:id="@+id/connector_select"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="60dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginEnd="60dp"
                        android:layout_marginRight="60dp"
                        android:gravity="center"
                        android:padding="3sp"
                        android:text="DMM DIRECT"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/webview_autocomplete"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:tooltipText="@string/autocomplete_title"
                        app:icon="@drawable/passkey_icon"
                        app:iconTint="@color/colorAccent" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="15dp"
                    app:cardBackgroundColor="#40000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingStart="15sp"
                        android:paddingLeft="15sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="15sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="10sp">

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/switch_silent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mode_silent"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/switch_broadcast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mode_broadcast"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/switch_control"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mode_show_panel"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/webview_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="START"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/colorPrimaryDark"
                        app:icon="@drawable/play_arrow_icon"
                        app:iconTint="@color/white"
                        app:strokeColor="@color/colorAccent"
                        app:strokeWidth="2dp" />

                    <TextView
                        android:id="@+id/webview_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5sp"
                        android:text="@string/cache_clear_text"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        app:menu="@menu/main"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_weight="2"
        android:padding="2dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_weight="1"
        android:padding="2dp"
        android:text="version_info"
        android:textColor="@color/white"
        android:textSize="12sp" />

</FrameLayout>