<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EntranceActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/version_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_version_label"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/version_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/version_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:background="@color/colorBackground"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/settings_version_check"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtitle_label"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/subtitle_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="from KC3Kai/kc3kai-translations"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/subtitle_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="LOADING..."
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subtitle_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/license_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_appinfo_label"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/license_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:background="@color/colorBackground"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="4dp"
                        android:text="LICENSE (Apache 2.0)"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/github_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:background="@color/colorBackground"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="4dp"
                        android:text="GITHUB"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</FrameLayout>